--- a/roles/satellite_client/tasks/main.yml
+++ b/roles/satellite_client/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
-# tasks register to satellite6 with or without puppet
-#
-- name: Workaround if you have a non working DNS
+- name: Workaround for a non working DNS
   lineinfile: 
     dest: /etc/hosts
     line: "{{ sat6_ip }} {{ sat6_fqdn }} sat6"
-
-- name: Download bootstrap.py from the {{ sat6_fqdn }} 
+#
+# If hostgroup != 'false' (i.e. install the client to be managed by Puppet)
+#
+- name: Download bootstrap.py from {{ sat6_fqdn }} 
   get_url:
     url: "http://{{ sat6_fqdn }}/pub/bootstrap.py"
     dest: /usr/local/sbin/bootstrap.py
@@ -20,28 +20,30 @@
     group: root
   when: hostgroup != 'false'
 
-- name: Register to Satellite6 with puppet enabled and add it to the correct hostgroup
+- name: Register to Satellite 6 with puppet enabled and add it to the correct hostgroup
   command: "/usr/local/sbin/bootstrap.py -l {{ admin_user}} -p {{ admin_pass }} -s {{ sat6_fqdn }} -o {{ org }} -L {{ loc }} -g {{ hostgroup }} -a {{ activationkey }}"
   when: hostgroup != 'false'
-
+#
+# If hostgroup == 'false' (i.e. install the client just as a content host)
+#
 - name: Install the katello-ca-consumer-latest.noarch.rpm from {{ sat6_fqdn }}
   command:  "/usr/bin/yum -y localinstall http://{{ sat6_fqdn }}/pub/katello-ca-consumer-latest.noarch.rpm"
   when: hostgroup == 'false'
 
-- name: Register to Satellite6 only for content 
-  command: "subscription-manager register --org={{ org }} --activationkey={{ activationkey }}"
+- name: Register to Satellite 6 only for content 
+  command: "/usr/sbin/subscription-manager register --org={{ org }} --activationkey={{ activationkey }}"
   when: hostgroup == 'false'
-  register: 'reg_return'
+  register: 'registered'
 
 - name: Install the katello-agent
   yum:
     name: katello-agent
     state: latest
-  when: hostgroup == 'false' and reg_return|success
+  when: hostgroup == 'false' and registered|success
   notify:
     - Start katello-agent
     - Enable katello-agent
 
 - name: Update the host to latest errata within the attached content view
   command: /usr/bin/yum -y update
-  when: updatehost != 'false'
+  when: updatehost == 'true'
