--- a/roles/satellite_client/tasks/main.yml
+++ b/roles/satellite_client/tasks/main.yml
@@ -21,7 +21,7 @@
   when: hostgroup != 'false'
 
 - name: Register to Satellite 6 with puppet enabled and add it to the correct hostgroup
-  command: "/usr/local/sbin/bootstrap.py -l {{ admin_user}} -p {{ admin_pass }} -s {{ sat6_fqdn }} -o {{ org }} -L {{ loc }} -g {{ hostgroup }} -a {{ activationkey }}"
+  command: "/usr/local/sbin/bootstrap.py -l {{ admin_user}} -p {{ admin_pass }} -s {{ sat6_fqdn }} -o {{ organization }} -L {{ location }} -g {{ hostgroup }} -a {{ activationkey }}"
   when: hostgroup != 'false'
 #
 # If hostgroup == 'false' (i.e. install the client just as a content host)
@@ -33,7 +33,7 @@
   when: hostgroup == 'false'
 
 - name: Register to Satellite 6 only for content 
-  command: "/usr/sbin/subscription-manager register --org={{ org }} --activationkey={{ activationkey }}"
+  command: "/usr/sbin/subscription-manager register --org={{ organization }} --activationkey={{ activationkey }}"
   when: hostgroup == 'false'
   register: 'registered'
 
