update to satellite_client main playbook

--- a/roles/satellite_client/tasks/main.yml
+++ b/roles/satellite_client/tasks/main.yml
@@ -48,6 +48,6 @@
 
 - name: Update the host to latest errata within the attached content view
   yum: 
-    name: * 
+    name: '*'
     state: latest
   when: updatehost == 'true'
