--- a/roles/satellite_client/tasks/main.yml
+++ b/roles/satellite_client/tasks/main.yml
@@ -10,7 +10,7 @@
   get_url:
     url: "http://{{ sat6_fqdn }}/pub/bootstrap.py"
     dest: /usr/local/sbin/bootstrap.py
-  when: hostgroup != 'false'
+  when: hostgroup|lower != 'false'
   
 - name: Copy bootstrap.py script to /usr/local/sbin and make it executable
   file:
@@ -18,11 +18,11 @@
     mode: 0755
     owner: root
     group: root
-  when: hostgroup != 'false'
+  when: hostgroup|lower != 'false'
 
 - name: Register to Satellite 6 with puppet enabled and add it to the correct hostgroup
   command: "/usr/local/sbin/bootstrap.py -l {{ admin_user}} -p {{ admin_pass }} -s {{ sat6_fqdn }} -o {{ organization }} -L {{ location }} -g {{ hostgroup }} -a {{ activationkey }}"
-  when: hostgroup != 'false'
+  when: hostgroup|lower != 'false'
 #
 # If hostgroup == 'false' (i.e. install the client just as a content host)
 #
@@ -30,18 +30,18 @@
   yum:
     name: http://{{ sat6_fqdn }}/pub/katello-ca-consumer-latest.noarch.rpm
     state: present
-  when: hostgroup == 'false'
+  when: hostgroup|lower == 'false'
 
 - name: Register to Satellite 6 only for content 
   command: "/usr/sbin/subscription-manager register --org={{ organization }} --activationkey={{ activationkey }}"
-  when: hostgroup == 'false'
+  when: hostgroup|lower == 'false'
   register: 'registered'
 
 - name: Install the katello-agent
   yum:
     name: katello-agent
     state: latest
-  when: hostgroup == 'false' and registered|success
+  when: hostgroup|lower == 'false' and registered|succeeded
   notify:
     - Start katello-agent
     - Enable katello-agent
@@ -50,4 +50,4 @@
   yum: 
     name: '*'
     state: latest
-  when: updatehost == 'true'
+  when: updatehost|lower == 'true'
