--- a/roles/lamp_simple/tasks/mariadb.yml
+++ b/roles/lamp_simple/tasks/mariadb.yml
@@ -63,5 +63,5 @@
     name: "{{ dbuser }}"
     password: "{{ dbpass }}"
     priv: "*.*:ALL"
-    host: localhost
+    host: "%"
     state: present
