update to a'dam

--- a/roles/lamp_simple/tasks/ntp.yml
+++ b/roles/lamp_simple/tasks/ntp.yml
@@ -17,3 +17,7 @@
     name: ntpd 
     state: started 
     enabled: yes
+    
+- name: set timezone to Asia/Tokyo
+  timezone:
+    name: Europe/Amsterdam
